--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>My Portfolio</title>
     </head>
     <body>
-
+        <h1>I AM LORENZ</h1>
     </body>
 </html>
