--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="picture1">
-                    <img src="/images/photo_1.jpg" alt="photo_1">
+                    <img src="images/photo_1.jpg" alt="photo_1">
                 </div>
             </section>
 
@@ -75,22 +75,22 @@
                 <div class="cells">
 
                     <div class="cell">
-                        <img src="/images/basketball.png" alt="basketball">
+                        <img src="images/basketball.png" alt="basketball">
                         <span>Basketball</span>
                     </div>
 
                     <div class="cell">
-                        <img src="/images/smart-tv.png" alt="tv">
+                        <img src="images/smart-tv.png" alt="tv">
                         <span>Anime</span>
                     </div>
 
                     <div class="cell">
-                        <img src="/images/mobile-game.png" alt="mobile-game">
+                        <img src="images/mobile-game.png" alt="mobile-game">
                         <span>Mobile Games</span>
                     </div>
 
                     <div class="cell">
-                        <img src="/images/musical-note.png" alt="mobile-game">
+                        <img src="images/musical-note.png" alt="mobile-game">
                         <span>Listening to Music</span>
                     </div>
 
@@ -107,44 +107,44 @@
                 <div class="skills-content">
                     <div class="left-languages">
                         <div class="language">
-                            <img src="/images/html_logo.png" alt="html logo">
+                            <img src="images/html_logo.png" alt="html logo">
                             <span>HTML</span>
                         </div>
 
                         <div class="language">
-                            <img src="/images/css_logo.png" alt="css logo">
+                            <img src="images/css_logo.png" alt="css logo">
                             <span>CSS</span>
                         </div>
 
                         <div class="language">
-                            <img src="/images/js_logo.png" alt="js logo">
+                            <img src="images/js_logo.png" alt="js logo">
                             <span>JavaScript</span>
                         </div>
 
                         <div class="language">
-                            <img src="/images/Rstudio_logo.jpg" alt="js logo">
+                            <img src="images/Rstudio_logo.jpg" alt="js logo">
                             <span>Rstudio</span>
                         </div>
 
                     </div>
 
                     <div class="picture2">
-                        <img src="/images/photo_2.jpg" alt="photo_2">
+                        <img src="images/photo_2.jpg" alt="photo_2">
                     </div>
 
                     <div class="right-languages">
                         <div class="language">
-                            <img src="/images/python_logo.png" alt="python logo">
+                            <img src="images/python_logo.png" alt="python logo">
                             <span>Python</span>
                         </div>
 
                         <div class="language">
-                            <img src="/images/c_logo.png" alt="c logo">
+                            <img src="images/c_logo.png" alt="c logo">
                             <span>C</span>
                         </div>
 
                         <div class="language">
-                            <img src="/images/java_logo.png" alt="java logo">
+                            <img src="images/java_logo.png" alt="java logo">
                             <span>Java</span>
                         </div>
                     </div>
