chore: Fixed Rstudio logo not showing

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </div>
 
                         <div class="language">
-                            <img src="images/Rstudio_logo.jpg" alt="js logo">
+                            <img src="images/RStudio_logo.jpg" alt="r logo">
                             <span>Rstudio</span>
                         </div>
 
